app1/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: certificates-demo-app1
spec:
  ports:
    - name: certificates-demo-app1-https
      port: 8443
  selector:
    app: certificates-demo-app1
